[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentreplay"
version = "0.1.0"
description = "Record, replay, and diff agent runs (LLMs + tools) for reproducibility and regression testing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Syed"}]
dependencies = [
  "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4.0",
]

[project.scripts]
agentreplay = "agentreplay.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
